[tool.poetry]
name = "platechain"
version = "0.0.1"
description = "A library of universal parsers for microplate data"
authors = ["Nicholas Larus-Stone <nicholas@sphinxbio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.316"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
tabulate = "^0.9.0"

[tool.poetry.group.server.dependencies]
fastapi = "^0.104.0"
langserve = "^0.0.15"
uvicorn = "^0.23.2"
sse-starlette = "^1.6.5"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.7.0"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
