[tool.poetry]
name = "platechain"
version = "0.0.4"
description = "A library of universal parsers for microplate data"
authors = ["Nicholas Larus-Stone <nicholas@sphinxbio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = ">=0.0.313,<0.1"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.7.0"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
